fix : type repas

--- a/templates/layout/header.html.twig
+++ b/templates/layout/header.html.twig
@@ -1,8 +1,8 @@
-<div class="w-full flex justify-between">
+<div class="w-full flex justify-between bg-white shadow-md">
 	<div>
 		<img src="{{ asset('images/logo.webp') }}" class="w-35" alt="Meal Chooser Logo">
 	</div>
-	<div>
+	<div class="items-center pr-8 flex">
 		<nav>
 			<ul class="flex gap-4">
 				<li>Home</li>
