--- a/templates/partials/repas/_repas_list.html.twig
+++ b/templates/partials/repas/_repas_list.html.twig
@@ -3,7 +3,7 @@
 	<section class="p-8">
 		<p>Nombre de repas :
 			{{ repas|length }}</p>
-		<div class="flex gap-4 flex-wrap ">
+		<div class="flex gap-4 flex-wrap justify-center">
 			{% for r in repas %}
 
 				<div class="bg-white p-4 w-1/8 h-auto">
