--- a/templates/layout/header.html.twig
+++ b/templates/layout/header.html.twig
@@ -1,12 +1,16 @@
 <div class="w-full flex justify-between bg-white shadow-md">
 	<div>
-		<img src="{{ asset('images/logo.webp') }}" class="w-35" alt="Meal Chooser Logo">
+		<a href="{{ path('app_home') }}">
+			<img src="{{ asset('images/logo.webp') }}" class="w-35" alt="Meal Chooser Logo">
+		</a>
 	</div>
 	<div class="items-center pr-8 flex">
 		<nav>
 			<ul class="flex gap-4">
 				<li>Home</li>
-				<li>Création de repas</li>
+				<li>
+					<a href="{{ path('app_repas_create')}}">Création de repas</a>
+				</li>
 				<li>Création de semaine</li>
 				<li>
 					<a href="{{ path('app_repas_list') }}">Les repas</a>
