feat: modify repas

--- a/templates/repas/repas-show.html.twig
+++ b/templates/repas/repas-show.html.twig
@@ -19,7 +19,7 @@
 					<p>{{ing.name }}</p>
 				{% endfor %}
 
-
+				<a href="{{ path('app_repas_modify', {'slug': repas.slug}) }}">Modifier</a>
 			</div>
 		</div>
 	</section>
