fix entity manager + generer semaine

--- a/templates/layout/header.html.twig
+++ b/templates/layout/header.html.twig
@@ -11,7 +11,9 @@
 				<li>
 					<a href="{{ path('app_repas_create')}}">Création de repas</a>
 				</li>
-				<li>Création de semaine</li>
+				<li>
+					<a href="{{path('app_semaine_home')}}">Générer une semaine de repas</a>
+				</li>
 				<li>
 					<a href="{{ path('app_repas_list') }}">Les repas</a>
 				</li>
